--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
   <script language="javascript" type="text/javascript" src="matter.min.js"></script>
   <script language="javascript" type="text/javascript" src="helpers.js"></script>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
   <style> body {padding: 0; margin: 0;} </style>
 </head>
 <body>
-  <canvas id="canvas" width="200" height="100"></canvas>
+hello 123
+<div id="test">
+  xyz
+</div>
 </body>
 </html>
