--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <script language="javascript" type="text/javascript" src="p5.min.js"></script>
   <script language="javascript" type="text/javascript" src="matter.min.js"></script>
   <script language="javascript" type="text/javascript" src="helpers.js"></script>
-  <script language="javascript" type="text/javascript" src="sketch.js"></script>
+  <script language="javascript" type="text/javascript" src="sketchhome.js"></script>
   <link rel="stylesheet" href="style.css">
   <style> body {padding: 0; margin: 0;} </style>
 </head>
 <body>
 hello 123
 <div id="test">
-  xyz
+  A Number that specifies the damping of the constraint, i.e. the amount of resistance applied to each body based on their velocities to limit the amount of oscillation. Damping will only be apparent when the constraint also has a very low stiffness. A value of 0.1 means the constraint will apply heavy damping, resulting in little to no oscillation. A value of 0 means the constraint will apply no damping.
 </div>
 </body>
 </html>
