--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8">
   <script language="javascript" type="text/javascript" src="p5.min.js"></script>
   <link rel="stylesheet" href="style.css">
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/mobile-detect/1.4.5/mobile-detect.min.js"></script>
   <script language="javascript" type="text/javascript" src="matter.min.js"></script>
   <script language="javascript" type="text/javascript" src="matter-attractors.js"></script>
   <script language="javascript" type="text/javascript" src="helpers.js"></script>
