--- a/Online Exhibition.html
+++ b/Online Exhibition.html
@@ -1,21 +1,26 @@
-<html>
+<!DOCTYPE html><!-- Last Published: Mon Nov 08 2021 03:05:57 GMT+0000 (Coordinated Universal Time) -->
+<html data-wf-domain="deconfine.webflow.io" data-wf-page="618508ab04d5d28592bd20fe"
+  data-wf-site="61729645471a28201eae8786">
+
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8" />
+  <title>Online Exhibition</title>
+  <meta content="Online Exhibition" property="og:title" />
+  <meta content="Online Exhibition" property="twitter:title" />
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link href="https://uploads-ssl.webflow.com/61729645471a28201eae8786/css/deconfine.webflow.f0ec350af.css"
     rel="stylesheet" type="text/css" />
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script language="javascript" type="text/javascript" src="p5.min.js"></script>
-  <link rel="stylesheet" href="style.css">
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/mobile-detect/1.4.5/mobile-detect.min.js"></script>
-  <script language="javascript" type="text/javascript" src="matter.min.js"></script>
-  <script language="javascript" type="text/javascript" src="matter-attractors.js"></script>
-  <script language="javascript" type="text/javascript" src="helpers.js"></script>
-  <script language="javascript" type="text/javascript" src="landing.js"></script>
+  <script
+    type="text/javascript">WebFont.load({ google: { families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic", "Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic"] } });</script>
+  <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
+  <script
+    type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
+  <link href="https://uploads-ssl.webflow.com/61729645471a28201eae8786/617a65ffe122cacd820649af_favicon.png"
+    rel="shortcut icon" type="image/x-icon" />
+  <link href="https://uploads-ssl.webflow.com/61729645471a28201eae8786/617a66017e1621049519a766_open%20graph.png"
+    rel="apple-touch-icon" /><!-- hide scrollbar across the site -->
 
-
-  <style> body {padding: 0; margin: 0;} </style>
-</head>
-<body>
   <style>
     body {
       overflow-y: scroll;
@@ -256,17 +261,17 @@
       <div class="container">
         <div class="hero">
           <div class="page-title">
-            <h1 class="is-d1" id="title0">Online Exhibition</h1>
+            <h1 class="is-d1">Online Exhibition</h1>
           </div>
           <div class="hero-desc__wrapper">
-            <div class="hero-desc is-base" id="text1">Confinement is part of the very essence of human existence: we are broadly
+            <div class="hero-desc is-base">Confinement is part of the very essence of human existence: we are broadly
               limited by the minds and bodies we are born in. Parallel to this biological confinement, society has
               conjured its own modes of confinement, deployed to control those who dare to transgress its norms, to
               digress from its invisible (but imposing) script. With the evolution of human civilization, its members
               have grown more and more adept at devising protean tools of confinement: schools, prisons, factories,
               visas and permits being some of the most common instances. Technology is rapidly gaining prominence as a
               tool that can be manipulated to enforce similar agendas.</div>
-            <div class="hero-desc is-base" id="text2">Confinement is part of the very essence of human existence: we are broadly
+            <div class="hero-desc is-base">Confinement is part of the very essence of human existence: we are broadly
               limited by the minds and bodies we are born in. Parallel to this biological confinement, society has
               conjured its own modes of confinement, deployed to control those who dare to transgress its norms, to
               digress from its invisible (but imposing) script. With the evolution of human civilization, its members
@@ -472,6 +477,12 @@
       </div>
     </div>
   </div>
-</div>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=61729645471a28201eae8786"
+    type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"></script>
+  <script src="https://uploads-ssl.webflow.com/61729645471a28201eae8786/js/webflow.dbcde7b35.js"
+    type="text/javascript"></script>
+  <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
 </body>
+
 </html>
