--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <link href="https://uploads-ssl.webflow.com/61729645471a28201eae8786/css/deconfine.webflow.f0ec350af.css"
     rel="stylesheet" type="text/css" />
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script language="javascript" type="text/javascript" src="p5.min.js"></script>
+  <script language="javascript" type="text/javascript" src="lib/p5.min.js"></script>
   <link rel="stylesheet" href="style.css">
    <script src="https://cdnjs.cloudflare.com/ajax/libs/mobile-detect/1.4.5/mobile-detect.min.js"></script>
-  <script language="javascript" type="text/javascript" src="matter.min.js"></script>
-  <script language="javascript" type="text/javascript" src="matter-attractors.js"></script>
-  <script language="javascript" type="text/javascript" src="helpers.js"></script>
-  <script language="javascript" type="text/javascript" src="landing.js"></script>
+  <script language="javascript" type="text/javascript" src="lib/matter.min.js"></script>
+  <script language="javascript" type="text/javascript" src="lib/matter-attractors.js"></script>
+  <script language="javascript" type="text/javascript" src="lib/helpers.js"></script>
+  <script language="javascript" type="text/javascript" src="sketch/sectionhome.js"></script>
 
 
   <style> body {padding: 0; margin: 0;} </style>
