filerenames as per kashmeer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script language="javascript" type="text/javascript" src="lib/matter.min.js"></script>
   <script language="javascript" type="text/javascript" src="lib/matter-attractors.js"></script>
   <script language="javascript" type="text/javascript" src="lib/helpers.js"></script>
-  <script language="javascript" type="text/javascript" src="sketch/homepage.js"></script>
+  <script language="javascript" type="text/javascript" src="sketch/landing.js"></script>
 
 
   <style> body {padding: 0; margin: 0;} </style>
