--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
 
   <!-- yatharth sketches -->
   <script
-    src="sketch/sectionhome.js"></script>
+    src="sketch/sectionhome.txt"></script>
 </body>
 
 </html>
